--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     }
   },
   "dependencies": {
-    "@eyblockchain/zokrates-zexe.js": "^0.3.1",
+    "@eyblockchain/zokrates-zexe.js": "file:./zokrates-zexe.js",
     "@semantic-release/git": "^9.0.0",
     "amqplib": "^0.10.3",
     "body-parser": "^1.20.1",
